--- a/Seq2SeqMath.ipynb
+++ b/Seq2SeqMath.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNJUEZsAms7UpjHmzdGH/nx",
+      "authorship_tag": "ABX9TyOBvRTlgvSPzHDLabUpv5Jv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -897,7 +897,9 @@
         "colab_type": "text"
       },
       "source": [
-        "## Deep"
+        "## Deep\n",
+        "\n",
+        "![](https://i.stack.imgur.com/3Lh2p.jpg)"
       ]
     },
     {
