--- a/Seq2SeqMath.ipynb
+++ b/Seq2SeqMath.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOBvRTlgvSPzHDLabUpv5Jv",
+      "authorship_tag": "ABX9TyOpgb8/ZNo/4QwGp7MPFMTu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2615,16 +2615,30 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "FTjp6WXk_GtS",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Advantages & Limitions\n",
+        "* Concept or Thought Vector is intuitive\n",
+        "* Flexible and easy to implement / adapt to many purposes\n",
+        "* Vanishing / Exploding Gradients & Long range understanding \n",
+        "* Ambiguity & Focus > \"The general advanced on his opponent, he was prepared!\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kz_Lvv6oH-S5",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         ""
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     }
   ]
